Refactor AWS into package

--- a/aws/aws_credentials.tmpl
+++ b/aws/aws_credentials.tmpl
@@ -1,11 +1,4 @@
-### BEGIN_AWSSSOHELPER ###
-
-# Master payer account
-# [aws_{{.SSOAccountID}}]
-# sso_start_url = {{.SSOStartURL}}
-# sso_region = {{.SSORegion}}
-# sso_account_id = {{.SSOAccountID}}
-# sso_role_name = {{.SSORoleName}}
+### {{$.Marker}}_START ###
 
 {{range .AccountList}}
 # Account Name: {{.AccountName}}
@@ -16,4 +9,4 @@ source_profile = aws_{{$.SSOAccountID}}
 role_session_name = AssumedAccessRole
 {{end}}
 
-### END_AWSSSOHELPER ###
+### {{$.Marker}}_END ###
